[tool.poetry]
name = "ausambience"
version = "0.1.0"
description = ""
authors = ["cbrunker"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.0"
pydantic-settings = "^2.0.3"
uvicorn = "^0.23.2"
orjson = "^3.9.5"
redis = "^5.0.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.1"
httpx = "^0.24.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
